--- a/package.json
+++ b/package.json
@@ -1,33 +1,38 @@
 {
-  "name": "auto-update-example",
-  "productName": "auto-update-example",
-  "version": "1.0.0",
-  "description": "My Electron application description",
-  "main": "src/index.js",
-  "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make",
-    "publish": "electron-forge publish",
-    "lint": "echo \"No linting configured\""
-  },
-  "keywords": [],
-  "author": {
-    "name": "culozik",
-    "email": "eugenbah@gmail.com"
-  },
-  "license": "MIT",
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0",
-    "update-electron-app": "^3.0.0"
-  },
-  "devDependencies": {
-    "@electron-forge/cli": "^7.2.0",
-    "@electron-forge/maker-deb": "^7.2.0",
-    "@electron-forge/maker-rpm": "^7.2.0",
-    "@electron-forge/maker-squirrel": "^7.2.0",
-    "@electron-forge/maker-zip": "^7.2.0",
-    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
-    "electron": "28.1.3"
-  }
+	"name": "auto-update-example",
+	"productName": "auto-update-example",
+	"version": "1.0.1",
+	"description": "My Electron application description",
+	"repository": "https://github.com/culozik/test_upd_rep",
+	"main": "src/index.js",
+	"scripts": {
+		"start": "env-cmd electron-forge start",
+		"package": "env-cmd electron-forge package",
+		"make": "env-cmd electron-forge make",
+		"publish": "env-cmd electron-forge publish",
+		"lint": "echo \"No linting configured\""
+	},
+	"keywords": [],
+	"author": {
+		"name": "culozik",
+		"email": "eugenbah@gmail.com"
+	},
+	"license": "MIT",
+	"dependencies": {
+		"@electron-forge/publisher-github": "^7.2.0",
+		"cross-env": "^7.0.3",
+		"dotenv": "^16.3.1",
+		"electron-squirrel-startup": "^1.0.0",
+		"env-cmd": "^10.1.0",
+		"update-electron-app": "^3.0.0"
+	},
+	"devDependencies": {
+		"@electron-forge/cli": "^7.2.0",
+		"@electron-forge/maker-deb": "^7.2.0",
+		"@electron-forge/maker-rpm": "^7.2.0",
+		"@electron-forge/maker-squirrel": "^7.2.0",
+		"@electron-forge/maker-zip": "^7.2.0",
+		"@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+		"electron": "28.1.3"
+	}
 }
